src/objects/EngagementCampaignSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Rules for the Engagement Level to defaultly assign to campaigns when they are created, based on their record type, type, or subtype.</description>
    <fields>
        <fullName>Campaign_Record_Type__c</fullName>
        <inlineHelpText>The Record Type of the Campaign to set an Engagement Level for.  This field is optional.</inlineHelpText>
        <label>Campaign Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Sub_Type__c</fullName>
        <inlineHelpText>The Sub Type of the Campaign to set an Engagement Level for.  This field is optional.</inlineHelpText>
        <label>Campaign Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <inlineHelpText>The Type of the Campaign to set an Engagement Level for.  This field is optional.</inlineHelpText>
        <label>Campaign Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Level__c</fullName>
        <inlineHelpText>The Engagement Level to set on new Campaigns</inlineHelpText>
        <label>Engagement Level</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Engagement Campaign Settings</label>
</CustomObject>